@@ -1,5 +1,5 @@
 const TITLE = "Cyclone Simulator";
-const VERSION_NUMBER = "20190201a";
+const VERSION_NUMBER = "20190203a";
 
 const SAVE_FORMAT = 0;  // Format "0" is probably to be a test and ultimately incompatible
 const EARLIEST_COMPATIBLE_FORMAT = 0;
@@ -46,6 +46,8 @@ const LOCALSTORAGE_KEY_PREFIX = "cyclone-sim-";
 const LOCALSTORAGE_KEY_BASIN = "basin";
 const LOCALSTORAGE_KEY_FORMAT = "format";
 const AUTOSAVE_TICK_PERIOD = 240;
+const ENVDATA_SAVE_FLOAT = -2;
+const ENVDATA_SAVE_MULT = 10000;
 
 const OFF_SEASON_POLAR_TEMP = -3;
 const PEAK_SEASON_POLAR_TEMP = 10;
