@@ -1,5 +1,8 @@
 About: A p5.js tropical cyclone simulation game
 
+v20190203a:
+    + Added part of the season saving algorithm (still WIP)
+    * Another change to how analysis environmental field data is stored to make saving/loading easier
 v20190201a:
     * Various optimizations to help with saving/loading
 v20190131a:
